--- a/BackGroundVerification/src/main/resources/application.properties
+++ b/BackGroundVerification/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 server.port=1128
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=manideep
-spring.datasource.password=manideep
+spring.datasource.username=capgemini
+spring.datasource.password=capgemini
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
